--- a/content/certified-installation-facilities/_index.html
+++ b/content/certified-installation-facilities/_index.html
@@ -15,11 +15,12 @@ description: Bruiser Conversions Jeep Wrangler LS Conversion Kit Certified Insta
         vehicle.
       </p>
       <p>
+        <a href="http://dakota-customs.com/" target="_blank">Dakota Customs</a> - Rapid City, SD (CIF)<br>
         <a href="http://dixie4wheeldrive.com/" target="_blank">Dixie 4 Wheel Drive</a> - St. George, UT (CIF)<br>
+        <a href="http://www.hendrickchryslerdodgejeepramofconcord.com/off-road-center.htm" target="_blank">Hendrick Off Road Center</a>  - Concord, NC (CIF)<br>
         <a href="http://impulseoffroad.com/" target="_blank">Impulse Offroad</a> - Salt Lake City, UT (CIF)<br>
         <a href="http://mikesoffroad.com/en/" target="_blank">Mike's Off Road Accessories</a> - Haltom City, TX (CIF)<br>
         <a href="http://nicholsautofab.com/" target="_blank">Nichols Auto Fab</a> - Prescott, AZ (CIF)<br>
-        <a href="http://dakota-customs.com/" target="_blank">Dakota Customs</a> - Rapid City, SD (CIF)<br>
         <a href="http://www.savvyoffroad.com/" target="_blank">Savvy Offroad</a> - Corona, CA (CIF)
       </p>
     </div>
