--- a/content/jeep-ls-conversion/_index.html
+++ b/content/jeep-ls-conversion/_index.html
@@ -140,26 +140,26 @@ aliases:
         <table class="table table-bordered table-inverse m-b-3">
           <tr>
             <td></td>
-            <td>6.2L - Stage 1</td>
-            <td>6.2L - Stage 2</td>
+            <td>6.2L - LS3 Stage 1</td>
+            <td>6.2L - LS3 Stage 2</td>
             <!--<td>6.2L - Stage 3</td>-->
           </tr>
           <tr>
             <td>2012+ Wrangler (Automatic)</td>
             <td>$28,500</td>
-            <td>$29,750</td>
+            <td>$30,000</td>
             <!--<td>$36,750</td>-->
           </tr>
           <tr>
             <td>2007 - 2011 Wrangler (Automatic)</td>
             <td>$31,680</td>
-            <td>$32,500</td>
+            <td>$33,180</td>
             <!--<td>$39,800</td>-->
           </tr>
           <tr>
             <td>2012+ Wrangler (Automatic) DIY Kit</td>
             <td>$23,500</td>
-            <td>$25,500</td>
+            <td>$25,000</td>
             <!--<td>$30,000</td>-->
           </tr>
           <tr>
