--- a/content/super-cab/_index.html
+++ b/content/super-cab/_index.html
@@ -73,8 +73,7 @@ description: Jeep Truck Super Cab Conversion
 
       <h2>Pricing</h2>
       <p>
-        Pricing for the Super Cab conversion starts at $35,000 and is dependent
-        on the full build sheet. For more details please contact us.
+        To customize your build or request pricing please <a href="/contact/">contact us</a>.
       </p>
     </div>
   </div><!-- row -->
