--- a/public/jk-crew/index.html
+++ b/public/jk-crew/index.html
@@ -160,8 +160,7 @@
 
       <h2>Pricing</h2>
       <p>
-        Pricing for the JK Crew conversion starts at $35,000 and is dependent
-        on the full build sheet. For more details please contact us.
+        To customize your build or request pricing please <a href="/contact/">contact us</a>.
       </p>
     </div>
   </div><!-- row -->
@@ -184,47 +183,6 @@
             <a class="icon-link" href="https://www.youtube.com/user/BruiserConversions" target="_blank"><img src='/images/graphics/youtube.png' /></a>
           </div>
         </span>
-      </div>
-    </div>
-    <div class="row m-b-3">
-      <div class="col-sm-3">
-        <div class="nav-title">Power</div>
-        <ul class="nav">
-          <li class="nav-item">
-            <a href="/jeep-ls-conversion">LS</a>
-          </li>
-          <li class="nav-item">
-            <a href="/jeep-hemi-conversion">Hemi</a>
-          </li>
-          <li class="nav-item">
-            <a href="/jeep-diesel-conversion">Diesel</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-sm-3">
-        <div class="nav-title">Body</div>
-        <ul class="nav">
-          <li class="nav-item">
-            <a href="/super-cab">Super Cab</a>
-          </li>
-          <li class="nav-item">
-            <a href="/jk-crew">JK Crew</a>
-          </li>
-          <li class="nav-item">
-            <a href="/overlander">Overlander</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-sm-6">
-				<div class="nav-title m-b-1">Subscribe to Our Newsletter</div>
-        <form action="//bruiserconversions.us5.list-manage.com/subscribe/post?u=d811f685777a9e7b7d636c5b5&amp;id=b43dde87bf" method="post" class="form-inline subscribe">
-        	<div class="form-group m-b-1">
-        		<input type="email" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email Address">
-        	</div>
-        	<div class="text-xs-right">
-        		<input type="submit" value="Subscribe" name="subscribe" class="btn btn-outline-success btn-outline-brand">
-        	</div>
-        </form>
       </div>
     </div>
 
