--- a/content/jk-crew/_index.html
+++ b/content/jk-crew/_index.html
@@ -101,8 +101,7 @@ aliases:
 
       <h2>Pricing</h2>
       <p>
-        Pricing for the JK Crew conversion starts at $35,000 and is dependent
-        on the full build sheet. For more details please contact us.
+        To customize your build or request pricing please <a href="/contact/">contact us</a>.
       </p>
     </div>
   </div><!-- row -->
