--- a/public/certified-installation-facilities/index.html
+++ b/public/certified-installation-facilities/index.html
@@ -87,11 +87,12 @@
         vehicle.
       </p>
       <p>
+        <a href="http://dakota-customs.com/" target="_blank">Dakota Customs</a> - Rapid City, SD (CIF)<br>
         <a href="http://dixie4wheeldrive.com/" target="_blank">Dixie 4 Wheel Drive</a> - St. George, UT (CIF)<br>
+        <a href="http://www.hendrickchryslerdodgejeepramofconcord.com/off-road-center.htm" target="_blank">Hendrick Off Road Center</a>  - Concord, NC (CIF)<br>
         <a href="http://impulseoffroad.com/" target="_blank">Impulse Offroad</a> - Salt Lake City, UT (CIF)<br>
         <a href="http://mikesoffroad.com/en/" target="_blank">Mike's Off Road Accessories</a> - Haltom City, TX (CIF)<br>
         <a href="http://nicholsautofab.com/" target="_blank">Nichols Auto Fab</a> - Prescott, AZ (CIF)<br>
-        <a href="http://dakota-customs.com/" target="_blank">Dakota Customs</a> - Rapid City, SD (CIF)<br>
         <a href="http://www.savvyoffroad.com/" target="_blank">Savvy Offroad</a> - Corona, CA (CIF)
       </p>
     </div>
@@ -115,47 +116,6 @@
             <a class="icon-link" href="https://www.youtube.com/user/BruiserConversions" target="_blank"><img src='/images/graphics/youtube.png' /></a>
           </div>
         </span>
-      </div>
-    </div>
-    <div class="row m-b-3">
-      <div class="col-sm-3">
-        <div class="nav-title">Power</div>
-        <ul class="nav">
-          <li class="nav-item">
-            <a href="/jeep-ls-conversion">LS</a>
-          </li>
-          <li class="nav-item">
-            <a href="/jeep-hemi-conversion">Hemi</a>
-          </li>
-          <li class="nav-item">
-            <a href="/jeep-diesel-conversion">Diesel</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-sm-3">
-        <div class="nav-title">Body</div>
-        <ul class="nav">
-          <li class="nav-item">
-            <a href="/super-cab">Super Cab</a>
-          </li>
-          <li class="nav-item">
-            <a href="/jk-crew">JK Crew</a>
-          </li>
-          <li class="nav-item">
-            <a href="/overlander">Overlander</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-sm-6">
-				<div class="nav-title m-b-1">Subscribe to Our Newsletter</div>
-        <form action="//bruiserconversions.us5.list-manage.com/subscribe/post?u=d811f685777a9e7b7d636c5b5&amp;id=b43dde87bf" method="post" class="form-inline subscribe">
-        	<div class="form-group m-b-1">
-        		<input type="email" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email Address">
-        	</div>
-        	<div class="text-xs-right">
-        		<input type="submit" value="Subscribe" name="subscribe" class="btn btn-outline-success btn-outline-brand">
-        	</div>
-        </form>
       </div>
     </div>
 
