--- a/public/jeep-ls-conversion/index.html
+++ b/public/jeep-ls-conversion/index.html
@@ -203,26 +203,26 @@
         <table class="table table-bordered table-inverse m-b-3">
           <tr>
             <td></td>
-            <td>6.2L - Stage 1</td>
-            <td>6.2L - Stage 2</td>
+            <td>6.2L - LS3 Stage 1</td>
+            <td>6.2L - LS3 Stage 2</td>
             <!--<td>6.2L - Stage 3</td>-->
           </tr>
           <tr>
             <td>2012+ Wrangler (Automatic)</td>
             <td>$28,500</td>
-            <td>$29,750</td>
+            <td>$30,000</td>
             <!--<td>$36,750</td>-->
           </tr>
           <tr>
             <td>2007 - 2011 Wrangler (Automatic)</td>
             <td>$31,680</td>
-            <td>$32,500</td>
+            <td>$33,180</td>
             <!--<td>$39,800</td>-->
           </tr>
           <tr>
             <td>2012+ Wrangler (Automatic) DIY Kit</td>
             <td>$23,500</td>
-            <td>$25,500</td>
+            <td>$25,000</td>
             <!--<td>$30,000</td>-->
           </tr>
           <tr>
@@ -278,47 +278,6 @@
             <a class="icon-link" href="https://www.youtube.com/user/BruiserConversions" target="_blank"><img src='/images/graphics/youtube.png' /></a>
           </div>
         </span>
-      </div>
-    </div>
-    <div class="row m-b-3">
-      <div class="col-sm-3">
-        <div class="nav-title">Power</div>
-        <ul class="nav">
-          <li class="nav-item">
-            <a href="/jeep-ls-conversion">LS</a>
-          </li>
-          <li class="nav-item">
-            <a href="/jeep-hemi-conversion">Hemi</a>
-          </li>
-          <li class="nav-item">
-            <a href="/jeep-diesel-conversion">Diesel</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-sm-3">
-        <div class="nav-title">Body</div>
-        <ul class="nav">
-          <li class="nav-item">
-            <a href="/super-cab">Super Cab</a>
-          </li>
-          <li class="nav-item">
-            <a href="/jk-crew">JK Crew</a>
-          </li>
-          <li class="nav-item">
-            <a href="/overlander">Overlander</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-sm-6">
-				<div class="nav-title m-b-1">Subscribe to Our Newsletter</div>
-        <form action="//bruiserconversions.us5.list-manage.com/subscribe/post?u=d811f685777a9e7b7d636c5b5&amp;id=b43dde87bf" method="post" class="form-inline subscribe">
-        	<div class="form-group m-b-1">
-        		<input type="email" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email Address">
-        	</div>
-        	<div class="text-xs-right">
-        		<input type="submit" value="Subscribe" name="subscribe" class="btn btn-outline-success btn-outline-brand">
-        	</div>
-        </form>
       </div>
     </div>
 
