Update diesel section

--- a/content/jeep-diesel-conversion/_index.html
+++ b/content/jeep-diesel-conversion/_index.html
@@ -1,6 +1,6 @@
 ---
-title: Jeep Wrangler Diesel Conversions
-description: Jeep Wrangler Diesel Conversions
+title: Jeep Wrangler Cummins R2.8 Diesel Conversions
+description: Jeep Wrangler Cummins R2.8 Diesel Conversions
 aliases:
     - /jeep-wrangler-cummins-isf-diesel-conversion
     - /jeep-wrangler-diesel-conversion
@@ -21,47 +21,73 @@ aliases:
 ---
 
 <div class="cover">
-  <h1>Jeep Wrangler Diesel Conversion</h1>
+  <h1>Jeep Wrangler Cummins R2.8 Diesel Conversion</h1>
   <img src="/images/jeep-diesel-engine-conversion-001.jpg" alt="Jeep Wrangler Diesel Conversions" style="position: absolute; bottom: 0;" />
 </div>
 
 <div class="container">
-  <div class="row m-b-3">
-    <div class="col-sm-6">
-      <img src="/images/jeep-diesel-engine-conversion-003.jpg" alt="Jeep Wrangler Diesel Conversions" class="img-fluid" />
-    </div>
-    <div class="col-sm-6">
-      <h2>Overview</h2>
-      <p>
-        The Cummins 4BT turbo diesel is the perfect option for the Jeep
-        enthusiast looking to improve their fuel efficiency and off-road
-        capability. In addition to boasting increased fuel efficiency,
-        the 4BT is also capable of running alternative fuel sources like
-        Waste Vegetable Oil (WVO). 2007 - 2011 Jeep Wrangler can be converted.
-      </p>
 
-      <h2>Power</h2>
-      <p>
-        The Cummins 4BT is one of the most proven diesel engines in the world.
-        If well maintained, one can expect to get 300,000 miles out of their
-        engine with 500,000 miles not being uncommon. Our standard conversion
-        includes a rebuilt Cummins 4BT with the option of using a used or
-        rebuilt model if the client prefers.
-      </p>
-    </div>
-  </div><!-- row -->
 
   <div class="row m-b-3">
     <div class="col-sm-6">
-      <h2>Transmission</h2>
+      <h2>Cummins R2.8 Repower for Jeeps – Taking Orders Now!</h2>
       <p>
-        The stock transmission must be replaced as part of the 4BT conversion.
-        Customers have the option of a 4l80e HD automatic transmission or
-        NV4500 manual transmission.
+        Bruiser Conversions is excited to be working side by side with Cummins on the upcoming release of their groundbreaking 
+        repower program.  As the leader in engine conversions for Jeep Wranglers, Bruiser Conversions has completed a fully 
+        integrated platform to include several different platforms including the Jeep JK, TJ, YJ and CJ . . . . . with other 
+        vehicles on the horizon as well. Your feedback will drive us in the direction of those vehicles.
+      </p>
+      <p> 
+        Bruiser Conversions will be offering complete installs as well as kits for the DIY crowd on the Jeep JK platform . . . 
+        These kits will also be available at one of the many installation partners we have across the United States.
+      </p>
+      <p> 
+        The Bruiser Conversions Cummins R2.8 Conversion will include all of the necessary components for the complete install 
+        of the ISF R2.8 engine. This conversion will include the engine with complete wiring harness, engine mounts, AC 
+        compressor and ac lines, electronic pedal assembly adapter for transmission, Torque convertor, starter, heater hoses, 
+        exhaust down tube, Power steering pump and hoses, alternator, battery tray and all other necessary components for a 
+        complete install. 
       </p>
     </div>
-    <div class="col-sm-6">
-      <img src="/images/jeep-diesel-engine-conversion-004.jpg" alt="Jeep Wrangler Diesel Conversions" class= "img-fluid" />
-    </div>
+    
+     <div class="col-sm-6">
+      <img src="/images/jeep-diesel-28-001.jpg" alt="Jeep Wrangler 2.8 Diesel Conversions" class="img-fluid" /> 
+     </div>
   </div>
+    <div class="row m-b-3">
+     <div class="col-sm-10">
+      <p>
+        All of our Cummins R2.8 conversions are fully integrated into the JK factory systems to provide flawless performance 
+        the ISF R2.8 engine produces 161 HP at  3600 rpms and 267 ft pounds of torque at 1500-3000 RPMs in its stock form and 
+        has the capability of much more if needed.
+      </p>
+	 </div>
+	</div>
+	  <div class="row m-b-3">
+	  	   <div class="col-sm-6">
+      <img src="/images/jeep-diesel-28-001.jpg" alt="Jeep Wrangler 2.8 Diesel Conversion Kit" class="img-fluid" />
+
+    </div>
+		<div class="col-sm-6">
+
+			<p>
+        Cummins will be releasing this program to the public in the fourth quarter of this year.  Bruiser Conversions will be leading the charge in making sure every Jeep owner with dreams of a diesel under the hood, can finally become reality.  Click Here to submit your info so that we can keep you up to date on this exciting evolution in the Jeep world and work on scheduling your install.
+      </p>
+
+      <p>
+        For additional Cummins Repower information check them out here: <a href="https://cumminsengines.com/repower.aspx" title="Cummins 2.8 Repower" target="new">Cummins Repower</a>.  Please read all emissions information for the desired part number prior to purchase as Federal emissions laws apply.  These kits are currently only for off-road use only and it is the responsibility of the purchaser to comply with any local laws.
+
+      </p>
+				
+		  </div>
+	</div>
 </div>
+<div class="bg-inverse">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 p-t-2">
+      <img src="../../public/images/jeep-diesel-28-specs.jpg" class="img-fluid">
+		</div>
+		</div>
+		</div>
+		</div>
