--- a/content/jeep-diesel-conversion/_index.html
+++ b/content/jeep-diesel-conversion/_index.html
@@ -30,7 +30,7 @@ aliases:
 
   <div class="row m-b-3">
     <div class="col-sm-6">
-      <h2>Cummins R2.8 Repower for Jeeps – Taking Orders Now!</h2>
+      <h2>Cummins R2.8 Repower for Jeeps - Taking Orders Now!</h2>
       <p>
         Bruiser Conversions is excited to be working side by side with Cummins on the upcoming release of their groundbreaking 
         repower program.  As the leader in engine conversions for Jeep Wranglers, Bruiser Conversions has completed a fully 
@@ -54,30 +54,29 @@ aliases:
       <img src="/images/jeep-diesel-28-001.jpg" alt="Jeep Wrangler 2.8 Diesel Conversions" class="img-fluid" /> 
      </div>
   </div>
-    <div class="row m-b-3">
-     <div class="col-sm-10">
-      <p>
+
+   <div class="row m-b-3">
+	<div class="col-sm-6">
+      <img src="/images/jeep-diesel-28-001.jpg" alt="Jeep Wrangler 2.8 Diesel Conversion Kit" class="img-fluid" />
+    </div>
+	<div class="col-sm-6">
+	 <p>
         All of our Cummins R2.8 conversions are fully integrated into the JK factory systems to provide flawless performance 
         the ISF R2.8 engine produces 161 HP at  3600 rpms and 267 ft pounds of torque at 1500-3000 RPMs in its stock form and 
         has the capability of much more if needed.
-      </p>
-	 </div>
-	</div>
-	  <div class="row m-b-3">
-	  	   <div class="col-sm-6">
-      <img src="/images/jeep-diesel-28-001.jpg" alt="Jeep Wrangler 2.8 Diesel Conversion Kit" class="img-fluid" />
-
-    </div>
-		<div class="col-sm-6">
-
-			<p>
-        Cummins will be releasing this program to the public in the fourth quarter of this year.  Bruiser Conversions will be leading the charge in making sure every Jeep owner with dreams of a diesel under the hood, can finally become reality.  Click Here to submit your info so that we can keep you up to date on this exciting evolution in the Jeep world and work on scheduling your install.
-      </p>
-
-      <p>
-        For additional Cummins Repower information check them out here: <a href="https://cumminsengines.com/repower.aspx" title="Cummins 2.8 Repower" target="new">Cummins Repower</a>.  Please read all emissions information for the desired part number prior to purchase as Federal emissions laws apply.  These kits are currently only for off-road use only and it is the responsibility of the purchaser to comply with any local laws.
-
-      </p>
+     </p>
+	 <p>
+        Cummins will be releasing this program to the public in the fourth quarter of this year.  Bruiser Conversions will be 
+        leading the charge in making sure every Jeep owner with dreams of a diesel under the hood, can finally become reality.  
+        Click Here to submit your info so that we can keep you up to date on this exciting evolution in the Jeep world and work 
+        on scheduling your install.
+     </p>
+     <p>
+        For additional Cummins Repower information check them out here: <a href="https://cumminsengines.com/repower.aspx" title="Cummins 2.8 Repower" target="new">Cummins Repower</a>.  
+        Please read all emissions information for the desired part number prior to purchase as Federal emissions laws apply.  
+        These kits are currently only for off-road use only and it is the responsibility of the purchaser to comply with any 
+        local laws.
+     </p>
 				
 		  </div>
 	</div>
@@ -86,7 +85,7 @@ aliases:
   <div class="container">
     <div class="row">
       <div class="col-sm-12 p-t-2">
-      <img src="../../public/images/jeep-diesel-28-specs.jpg" class="img-fluid">
+      <img src="/images/jeep-diesel-28-specs.jpg" class="img-fluid">
 		</div>
 		</div>
 		</div>
