--- a/public/jeep-diesel-conversion/index.html
+++ b/public/jeep-diesel-conversion/index.html
@@ -79,8 +79,6 @@
 </div>
 
 <div class="container">
-
-
   <div class="row m-b-3">
     <div class="col-sm-6">
       <h2>Cummins R2.8 Repower for Jeeps - Taking Orders Now!</h2>
@@ -129,20 +127,40 @@
         Please read all emissions information for the desired part number prior to purchase as Federal emissions laws apply.  
         These kits are currently only for off-road use only and it is the responsibility of the purchaser to comply with any 
         local laws.
-     </p>
-				
-		  </div>
-	</div>
-</div>
+     </p>		
+    </div>
+   </div>
+ </div>
 <div class="bg-inverse">
   <div class="container">
     <div class="row">
       <div class="col-sm-12 p-t-2">
       <img src="/images/jeep-diesel-28-specs.jpg" class="img-fluid">
-		</div>
-		</div>
-		</div>
-		</div>
+    </div>
+   </div>
+ </div>
+</div>
+<div class="container">
+  <div class="row m-b-3">
+    <div class="col-sm-11">
+     <img src="/images/diesel28-logo.jpg" alt="Jeep Wrangler 2.8 Diesel Conversion Kit" class="img-fluid" />
+     <p>
+     	The R2.8 Turbo Diesel is a powerful 2.8-liter 4-cylinder engine targeted as a cleaner and more efficient alternative to 
+     	many older original gasoline and diesel engines used in iconic small pickups, SUV's, 4x4's and more.  The combination of 
+     	low end torque, low fuel consumption, low engine operating temperatures, modern high-pressure common rail fuel injection 
+     	and compact packaging makes the R2.8 Turbo Diesel the ideal engine to power your project wherever your adventure may take you.
+     </p>
+     <p>The engine comes dressed with a power steering pump, 120 amp alternator, camshaft-driven vacuum pump, grid heater, and 
+     engine-mounted passive diesel oxidation catalyst. In addition to the engine itself, the kit also includes many major components 
+     necessary for engine operation, including a universal wiring harness, engine control module, accelerator pedal, OBD port, and a 
+     digital J1939 data display.  The installation documentation provides guidance for right-sizing the engine cooling package 
+     required (radiator and charge air cooler).
+     Please read all emissions information for the desired part number prior to purchase as Federal emissions laws apply.
+
+     </p>
+    </div>
+  </div>
+</div>
 
 
     <div class="container-fluid footer">
