--- a/content/jeep-diesel-conversion/_index.html
+++ b/content/jeep-diesel-conversion/_index.html
@@ -66,7 +66,7 @@ aliases:
 	 <p>
         Cummins will be releasing this program to the public in the fourth quarter of this year.  Bruiser Conversions will be 
         leading the charge in making sure every Jeep owner with dreams of a diesel under the hood, can finally become reality.  
-        Click Here to submit your info so that we can keep you up to date on this exciting evolution in the Jeep world and work 
+        <a href="/contact" target="_self">Click Here</a> to submit your info so that we can keep you up to date on this exciting evolution in the Jeep world and work 
         on scheduling your install.
      </p>
      <p>
@@ -96,14 +96,14 @@ aliases:
      <br>
      <p>
      	The R2.8 Turbo Diesel is a powerful 2.8-liter 4-cylinder engine targeted as a cleaner and more efficient alternative to 
-     	many older original gasoline and diesel engines used in iconic small pickups, SUV's, 4x4's and more.  The combination of 
+     	many older original gasoline and diesel engines used in iconic small pickups, SUV's, 4x4's and more. The combination of 
      	low end torque, low fuel consumption, low engine operating temperatures, modern high-pressure common rail fuel injection 
      	and compact packaging makes the R2.8 Turbo Diesel the ideal engine to power your project wherever your adventure may take you.
      </p>
      <p>The engine comes dressed with a power steering pump, 120 amp alternator, camshaft-driven vacuum pump, grid heater, and 
-     engine-mounted passive diesel oxidation catalyst. In addition to the engine itself, the kit also includes many major components 
+     engine-mounted passive diesel oxidation catalyst. In addition to the engine itself, the kit also includes many major components 
      necessary for engine operation, including a universal wiring harness, engine control module, accelerator pedal, OBD port, and a 
-     digital J1939 data display.  The installation documentation provides guidance for right-sizing the engine cooling package 
+     digital J1939 data display. The installation documentation provides guidance for right-sizing the engine cooling package 
      required (radiator and charge air cooler).
      Please read all emissions information for the desired part number prior to purchase as Federal emissions laws apply.
 
