Update Cumins Issues

--- a/content/jeep-diesel-conversion/_index.html
+++ b/content/jeep-diesel-conversion/_index.html
@@ -21,17 +21,17 @@ aliases:
 ---
 
 <div class="cover">
-  <h1>Jeep Wrangler Cummins R2.8 Diesel Conversion</h1>
+  <h1>Jeep Wrangler Cummins&reg; R2.8 Diesel Conversion</h1>
   <img src="/images/jeep-diesel-engine-conversion-001.jpg" alt="Jeep Wrangler Diesel Conversions" style="position: absolute; bottom: 0;" />
 </div>
 
 <div class="container">
   <div class="row m-b-3">
     <div class="col-sm-6">
-      <h2>Cummins R2.8 Repower for Jeeps - Taking Orders Now!</h2>
+      <h2>Cummins&reg; R2.8 Repower for Jeeps - Taking Orders Now!</h2>
       <p>
-        Bruiser Conversions is excited to be working side by side with Cummins on the upcoming release of their groundbreaking 
-        repower program.  As the leader in engine conversions for Jeep Wranglers, Bruiser Conversions has completed a fully 
+        Bruiser Conversions is excited to be a Cummins&reg; BETA customer on the upcoming release of their groundbreaking repower program.  
+        As the leader in engine conversions for Jeep Wranglers, Bruiser Conversions has completed a fully 
         integrated platform to include several different platforms including the Jeep JK, TJ, YJ and CJ . . . . . with other 
         vehicles on the horizon as well. Your feedback will drive us in the direction of those vehicles.
       </p>
@@ -40,8 +40,8 @@ aliases:
         These kits will also be available at one of the many installation partners we have across the United States.
       </p>
       <p> 
-        The Bruiser Conversions Cummins R2.8 Conversion will include all of the necessary components for the complete install 
-        of the ISF R2.8 engine. This conversion will include the engine with complete wiring harness, engine mounts, AC 
+        The Bruiser Conversions Cummins&reg; R2.8 Conversion will include all of the necessary components for the complete install 
+        of the Cummins&reg; R2.8 engine. This conversion will include the engine with complete wiring harness, engine mounts, AC 
         compressor and ac lines, electronic pedal assembly adapter for transmission, Torque convertor, starter, heater hoses, 
         exhaust down tube, Power steering pump and hoses, alternator, battery tray and all other necessary components for a 
         complete install. 
@@ -59,18 +59,18 @@ aliases:
     </div>
 	<div class="col-sm-6">
 	 <p>
-        All of our Cummins R2.8 conversions are fully integrated into the JK factory systems to provide flawless performance 
-        the ISF R2.8 engine produces 161 HP at  3600 rpms and 267 ft pounds of torque at 1500-3000 RPMs in its stock form and 
+        All of our Cummins&reg; R2.8 conversions are fully integrated into the JK factory systems to provide flawless performance 
+        the Cummins&reg; R2.8 engine produces 161 HP at  3600 rpms and 267 ft pounds of torque at 1500-3000 RPMs in its stock form and 
         has the capability of much more if needed.
      </p>
 	 <p>
-        Cummins will be releasing this program to the public in the fourth quarter of this year.  Bruiser Conversions will be 
+        Cummins&reg; will be releasing this program to the public in the fourth quarter of this year.  Bruiser Conversions will be 
         leading the charge in making sure every Jeep owner with dreams of a diesel under the hood, can finally become reality.  
         <a href="/contact" target="_self">Click Here</a> to submit your info so that we can keep you up to date on this exciting evolution in the Jeep world and work 
         on scheduling your install.
      </p>
      <p>
-        For additional Cummins Repower information check them out here: <a href="https://cumminsengines.com/repower.aspx" title="Cummins 2.8 Repower" target="new">Cummins Repower</a>.  
+        For additional Cummins&reg; Repower information check them out here: <a href="https://cumminsengines.com/repower.aspx" title="Cummins&reg; 2.8 Repower" target="new">Cummins&reg; Repower</a>.  
         Please read all emissions information for the desired part number prior to purchase as Federal emissions laws apply.  
         These kits are currently only for off-road use only and it is the responsibility of the purchaser to comply with any 
         local laws.
@@ -81,7 +81,7 @@ aliases:
 <div class="bg-inverse">
   <div class="container">
     <div class="row">
-      <div class="col-sm-12 p-t-2">
+      <div class="col-sm-9">
       <img src="/images/jeep-diesel-28-specs.jpg" class="img-fluid">
       <br>
     </div>
