Update installation paragraph

--- a/public/jeep-diesel-conversion/index.html
+++ b/public/jeep-diesel-conversion/index.html
@@ -88,10 +88,7 @@
         integrated platform to include several different platforms including the Jeep JK, TJ, YJ and CJ . . . . . with other 
         vehicles on the horizon as well. Your feedback will drive us in the direction of those vehicles.
       </p>
-      <p> 
-        Bruiser Conversions will be offering complete installs as well as kits for the DIY crowd on the Jeep JK platform . . . 
-        These kits will also be available at one of the many installation partners we have across the United States.
-      </p>
+      <p>Bruiser Conversions will offer complete, turn-key, installation at our Clearwater, FL based facility. For the Do-It-Yourself crowd, we will be releasing a complete conversion kit.  It will be available for drop-shop and through our network of installation partners throughout the United States.</p>
       <p> 
         The Bruiser Conversions Cummins&reg; R2.8 Conversion will include all of the necessary components for the complete install 
         of the Cummins&reg; R2.8 engine. This conversion will include the engine with complete wiring harness, engine mounts, AC 
