Update thank you response

--- a/content/thankyou/_index.html
+++ b/content/thankyou/_index.html
@@ -11,7 +11,8 @@ aliases:
 </div>
 
 <div class="container m-b-3">
-  <h1>Thank you for reaching out to Bruiser!</h1>
+  <h1>Thank you for your submission.  </h1>
 <p>
-	<div>We will get back to you shortly regarding the information you submitted.</p><p>Feel free to followup via email at: <a href="mailto:info@bruiserconversions.com">info@bruiserconversions.com</a> or phone: 727-317-4902</div></p>
+	<div>Our sales team will review the information provided and will contact you with the available options for your build. If you have any additional questions or would like to update your request, please send an email to <a href="mailto:info@bruiserconversions.com" target="_blank">info@bruiserconversions.com</a>
+  <p></div></p>
 </div>
