Update LS Pricing Matrix

--- a/public/jeep-ls-conversion/index.html
+++ b/public/jeep-ls-conversion/index.html
@@ -198,62 +198,184 @@
 <div class="bg-inverse">
   <div class="container">
     <div class="row">
-      <div class="col-sm-12 p-t-2">
-        <h2 class="m-b-2" style="text-align: center">Installations and Kits</h2>
+      <div class="col-sm-15 p-t-2">
+        <h2 class="m-b-2" style="text-align: left">Turn-Key LS3 Installation at the Bruiser Conversions Facility</h2>
         <table class="table table-bordered table-inverse m-b-3">
           <tr>
-            <td></td>
-            <td>6.2L - LS3 Stage 1</td>
-            <td>6.2L - LS3 Stage 2</td>
+            <td><strong>Platform</strong></td>
+            <td><strong>
+              <!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'Horsepower'}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">Horsepower</span></strong></td>
+            <td><strong>
+              <!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'Torque'}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">Torque</span></strong></td>
+            <td><strong>
+              <!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'Engine Condition'}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">Engine Condition</span></strong></td>
+            <td><strong>
+              <!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'Warranty'}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">Warranty</span></strong></td>
+            <td><strong>
+              <!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'Min. Octane'}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">Min. Octane</span></strong></td>
+            <td><strong>Cost</strong></td>
             <!--<td>6.2L - Stage 3</td>-->
           </tr>
           <tr>
-            <td>2012+ Wrangler (Automatic)</td>
-            <td>$28,500</td>
-            <td>$30,000</td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'2012+ JK/JKU Wrangler - Automatic Transmission'}">2012+ JK/JKU Wrangler - Automatic Transmission</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'450 @ 5800 RPM'}">450 @ 5800 RPM</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'460 @ 4600 RPM'}">460 @ 4600 RPM</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'New'}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">New</span></td>
+            <td>3 Year Limited / 36,000 mi </td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':3,'3':91}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">91</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':3,'3':23900}" data-sheets-userformat="{'2':14337,'3':[null,2,'\'$\'#,##0.00',1],'14':[null,2,0],'15':'Calibri','16':11}">$23,900.00</span></td>
             <!--<td>$36,750</td>-->
           </tr>
           <tr>
-            <td>2007 - 2011 Wrangler (Automatic)</td>
-            <td>$31,680</td>
-            <td>$33,180</td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'2012+ JK/JKU Wrangler - Automatic Transmission'}">2012+ JK/JKU Wrangler - Automatic Transmission</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'500 @ 6000 RPM'}">500 @ 6000 RPM</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'495 @ 6000 RPM'}">495 @ 6000 RPM</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'New'}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">New</span></td>
+            <td>3 Year Limited / 36,000 mi </td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':3,'3':93}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">93</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':3,'3':26400}" data-sheets-userformat="{'2':14337,'3':[null,2,'\'$\'#,##0.00',1],'14':[null,2,0],'15':'Calibri','16':11}" data-sheets-formula="=23900+2500">$26,400.00</span></td>
             <!--<td>$39,800</td>-->
           </tr>
           <tr>
-            <td>2012+ Wrangler (Automatic) DIY Kit</td>
-            <td>$23,500</td>
-            <td>$25,000</td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'2007-11 JK/JKU Wrangler - Automatic Transmission'}">2007-11 JK/JKU Wrangler - Automatic Transmission</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'450 @ 5800 RPM'}">450 @ 5800 RPM</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'460 @ 4600 RPM'}">460 @ 4600 RPM</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'New'}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">New</span></td>
+            <td>3 Year Limited / 36,000 mi </td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':3,'3':91}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">91</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':3,'3':28400}" data-sheets-userformat="{'2':14337,'3':[null,2,'\'$\'#,##0.00',1],'14':[null,2,0],'15':'Calibri','16':11}">$28,400.00</span></td>
             <!--<td>$30,000</td>-->
           </tr>
           <tr>
-            <td>Horsepower (hp)</td>
-            <td>450 @ 5800 rpm</td>
-            <td>500 @ 6000 rpm</td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'2007-11 JK/JKU Wrangler - Automatic Transmission'}">2007-11 JK/JKU Wrangler - Automatic Transmission</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'500 @ 6000 RPM'}">500 @ 6000 RPM</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'495 @ 6000 RPM'}">495 @ 6000 RPM</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'New'}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">New</span></td>
+            <td>3 Year Limited / 36,000 mi </td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':3,'3':93}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">93</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':3,'3':30900}" data-sheets-userformat="{'2':14337,'3':[null,2,'\'$\'#,##0.00',1],'14':[null,2,0],'15':'Calibri','16':11}" data-sheets-formula="=28400+2500">$30,900.00</span></td>
             <!--<td>550 @ 5800 rpm</td>-->
           </tr>
+        </table>
+        <br>
+         <h2 class="m-b-2" style="text-align: left">Do-It-Yourself Engine LS3 Conversion Kit</h2>
+        <table class="table table-bordered table-inverse m-b-3">
           <tr>
-            <td>Torque (ft. lbs.)</td>
-            <td>460 @ 4600 rpm</td>
-            <td>495 @ 4400 rpm</td>
-            <!--<td>480 @ 4400 rpm</td>-->
+            <td><strong>Platform</strong></td>
+            <td><strong>
+              <!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'Horsepower'}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">Horsepower</span></strong></td>
+            <td><strong>
+              <!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'Torque'}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">Torque</span></strong></td>
+            <td><strong>
+              <!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'Engine Condition'}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">Engine Condition</span></strong></td>
+            <td><strong>
+              <!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'Warranty'}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">Warranty</span></strong></td>
+            <td><strong>
+              <!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'Min. Octane'}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">Min. Octane</span></strong></td>
+            <td><strong>Cost</strong></td>
+            <!--<td>6.2L - Stage 3</td>-->
           </tr>
           <tr>
-            <td>Engine Condition</td>
-            <td>New</td>
-            <td>New</td>
-            <!--<td>New</td>-->
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'2012+ JK/JKU Wrangler - Automatic Transmission'}">2012+ JK/JKU Wrangler - Automatic Transmission</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'450 @ 5800 RPM'}">450 @ 5800 RPM</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'460 @ 4600 RPM'}">460 @ 4600 RPM</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'New'}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">New</span></td>
+            <td>3 Year Limited / 36,000 mi </td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':3,'3':91}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">91</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+              <!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':3,'3':18900}" data-sheets-userformat="{'2':14337,'3':[null,2,'\'$\'#,##0.00',1],'14':[null,2,0],'15':'Calibri','16':11}">$18,900.00</span></td>
+            <!--<td>$36,750</td>-->
           </tr>
           <tr>
-            <td>Engine Warranty</td>
-            <td>1 year / 12,000 miles</td>
-            <td>1 year / 12,000 miles</td>
-            <!--<td>1 year / 12,000 miles</td>-->
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'2012+ JK/JKU Wrangler - Automatic Transmission'}">2012+ JK/JKU Wrangler - Automatic Transmission</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'500 @ 6000 RPM'}">500 @ 6000 RPM</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'495 @ 6000 RPM'}">495 @ 6000 RPM</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'New'}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">New</span></td>
+            <td>3 Year Limited / 36,000 mi </td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':3,'3':93}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">93</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+              <!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':3,'3':21400}" data-sheets-userformat="{'2':14337,'3':[null,2,'\'$\'#,##0.00',1],'14':[null,2,0],'15':'Calibri','16':11}" data-sheets-formula="=18900+2500">$21,400.00</span></td>
+            <!--<td>$39,800</td>-->
           </tr>
           <tr>
-            <td>Fuel Type</td>
-            <td>91</td>
-            <td>93</td>
-            <!--<td>93</td>-->
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'2007-11 JK/JKU Wrangler - Automatic Transmission'}">2007-11 JK/JKU Wrangler - Automatic Transmission</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'450 @ 5800 RPM'}">450 @ 5800 RPM</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'460 @ 4600 RPM'}">460 @ 4600 RPM</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'New'}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">New</span></td>
+            <td>3 Year Limited / 36,000 mi </td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':3,'3':91}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">91</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+              <!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':3,'3':22890}" data-sheets-userformat="{'2':14337,'3':[null,2,'\'$\'#,##0.00',1],'14':[null,2,0],'15':'Calibri','16':11}">$22,890.00</span></td>
+            <!--<td>$30,000</td>-->
+          </tr>
+          <tr>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'2007-11 JK/JKU Wrangler - Automatic Transmission'}">2007-11 JK/JKU Wrangler - Automatic Transmission</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'500 @ 6000 RPM'}">500 @ 6000 RPM</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'495 @ 6000 RPM'}">495 @ 6000 RPM</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':2,'2':'New'}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">New</span></td>
+            <td>3 Year Limited / 36,000 mi </td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':3,'3':93}" data-sheets-userformat="{'2':14400,'9':1,'14':[null,2,0],'15':'Calibri','16':11}">93</span></td>
+            <td><!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+              <!--td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}-->
+            <span data-sheets-value="{'1':3,'3':25390}" data-sheets-userformat="{'2':14337,'3':[null,2,'\'$\'#,##0.00',1],'14':[null,2,0],'15':'Calibri','16':11}" data-sheets-formula="=22890+2500">$25,390.00</span></td>
+            <!--<td>550 @ 5800 rpm</td>-->
           </tr>
         </table>
       </div>
