--- a/content/index.html
+++ b/content/index.html
@@ -28,9 +28,13 @@ aliases:
   <ol class="carousel-indicators">
     <li data-target="#home-carousel" data-slide-to="0" class="active"></li>
     <li data-target="#home-carousel" data-slide-to="1"></li>
+    <li data-target="#home-carousel" data-slide-to="2"></li>
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
+        <img src="images/SEMA.jpg" alt="Bruiser Conversions at SEMA" />
+    </div>
+   <div  class="carousel-item">
       <a href="/jeep-ls-conversion">
         <div class="title">LS Engine Conversion</div>
         <img src="images/jeep-ls-engine-conversion-002.jpg" alt="LS Engine Conversion" />
